# magic_enum_cpp20

./: .gitignore  CMakeLists.txt  readme.md
cmake/: build.cmake  config.cmake  develop.cmake  utils.cmake
example/: CMakeLists.txt  example.cpp
include/magic_enum/: magic_enum.hpp  magic_enum_format.hpp  magic_enum_iostream.hpp
include/magic_enum/core/: check.hpp  concept.hpp  config.hpp  core.hpp  enum_bitwise.hpp  enum_cast.hpp  enum_concept.hpp  enum_config.hpp  enum_contains.hpp  enum_count.hpp  enum_customize.hpp  enum_entries.hpp  enum_index.hpp  enum_integer.hpp  enum_name.hpp  enum_names.hpp  enum_type_name.hpp  enum_value.hpp  version.hpp
test/: CMakeLists.txt  crack.cpp  test.cpp
test/core/: cmp_less.cpp  enum_alias.cpp  enum_cast.cpp  enum_contains.cpp  enum_count.cpp  enum_entries.cpp  enum_index.cpp  enum_interger.cpp  enum_name.cpp  enum_type_name.cpp  enum_value.cpp  main.cpp  resource.h  type_traits.cpp  valid.cpp
